# matousek-partition-tree

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: measure_crossings.py
cpp/: bench  bench.cpp
docs/: README.md  efficient_partition_trees_calculation_notes.aux  efficient_partition_trees_calculation_notes.md  efficient_partition_trees_calculation_notes.tex  efficient_partition_trees_calculation_notes.toc  partition_tree_short_report.tex  partition_tree_technical_report.tex  slides_lecture06_matousek_correspondence.aux  slides_lecture06_matousek_correspondence.md  slides_lecture06_matousek_correspondence.tex  slides_lecture06_matousek_correspondence.toc  two_dimensional_partition_theorem_math.md  two_dimensional_partition_theorem_math.tex  two_dimensional_partition_theorem_math_only.md  two_dimensional_partition_theorem_math_only.tex
examples/: README.md  points_example.csv
src/: matousek_partition_tree.py  practical_partition_tree_2d.py  visualize_matousek.py  visualize_partition_tree_2d.py
src/matousek_partition_tree/: __init__.py  cli.py  core.py  practical.py  practical_cli.py
tests/: conftest.py  test_matousek_partition_tree.py  test_practical_partition_tree.py
