[project]
name = "matousek-partition-tree-demo"
version = "0.2.0"
description = "Verified proof-skeleton implementation of the 2D Matousek partition-tree construction."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]
dev = ["pytest>=8"]

[tool.ruff]
line-length = 100
