[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matousek-partition-tree"
version = "0.3.0"
description = "Verified proof-skeleton implementation of the 2D Matoušek partition-tree construction for halfplane range counting."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "wangyi1010" }]
keywords = ["computational-geometry", "partition-tree", "matousek", "halfplane-range-counting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "ruff>=0.4",
]

[project.scripts]
matousek-demo = "matousek_partition_tree.cli:main"
practical-tree = "matousek_partition_tree.practical_cli:main"

[project.urls]
Repository = "https://github.com/wangyi1010/matousek-partition-tree"

[tool.hatch.build.targets.wheel]
packages = ["src/matousek_partition_tree"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]
ignore = ["E741"]  # `l` for "line" is conventional in computational geometry

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["matousek_partition_tree"]

[tool.coverage.report]
show_missing = true
# Set from a measured baseline (see CHANGELOG 0.3.0), not aspiration:
# the algorithm paths are fully exercised by the property tests; the two
# CLI mains run in CI as demo steps but not under coverage.
fail_under = 75
